gramaticas/TerraParser.py
# Generated from gramaticas/Terra.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TerraParser ( Parser ):

    grammarFileName = "Terra.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'('", "','", "')'", "':'", "'['", 
                     "']'", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'^'", "'!'", "'fijo'", "'var'", "'si'", "'sino'", 
                     "'fin'", "'mientras'", "'para'", "'en'", "'mostrar'", 
                     "'funcion'", "'retornar'", "'cargar'", "'guardar'", 
                     "'como'", "'con'", "'separador'", "'seleccionar'", 
                     "'filtrar'", "'donde'", "'crear'", "'renombrar'", "'ordenar'", 
                     "'por'", "'asc'", "'desc'", "'eliminar'", "'duplicados'", 
                     "'nulos'", "'rellenar'", "'convertir'", "'agrupar'", 
                     "'resumir'", "'limitar'", "'graficar'", "'barras'", 
                     "'lineas'", "'histograma'", "'dispersion'", "'caja'", 
                     "'eje_x'", "'eje_y'", "'titulo'", "'leyenda'", "'numero'", 
                     "'decimal'", "'texto'", "'booleano'", "<INVALID>", 
                     "'nulo'", "'|>'", "'&&'", "'||'", "'=='", "'!='", "'>='", 
                     "'<='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "FIJO", "VAR", "SI", "SINO", "FIN", "MIENTRAS", 
                      "PARA", "EN", "MOSTRAR", "FUNCION", "RETORNAR", "CARGAR", 
                      "GUARDAR", "COMO", "CON", "SEPARADOR", "SELECCIONAR", 
                      "FILTRAR", "DONDE", "CREAR", "RENOMBRAR", "ORDENAR", 
                      "POR", "ASC", "DESC", "ELIMINAR", "DUPLICADOS", "NULOS", 
                      "RELLENAR", "CONVERTIR", "AGRUPAR", "RESUMIR", "LIMITAR", 
                      "GRAFICAR", "BARRAS", "LINEAS", "HISTOGRAMA", "DISPERSION", 
                      "CAJA", "EJE_X", "EJE_Y", "TITULO", "LEYENDA", "T_NUMERO", 
                      "T_DECIMAL", "T_TEXTO", "T_BOOLEANO", "BOOLEANO", 
                      "NULO", "FLECHA", "AND", "OR", "IGUAL", "DIFERENTE", 
                      "MAYOR_IGUAL", "MENOR_IGUAL", "DECIMAL", "NUMERO", 
                      "TEXTO", "IDENTIFICADOR", "NL", "WS", "COMENTARIO_LINEA", 
                      "COMENTARIO_BLOQUE" ]

    RULE_programa = 0
    RULE_sentencia = 1
    RULE_bloque = 2
    RULE_declaracion_variable = 3
    RULE_asignacion = 4
    RULE_expresion_stmt = 5
    RULE_mostrar_stmt = 6
    RULE_si_stmt = 7
    RULE_mientras_stmt = 8
    RULE_para_stmt = 9
    RULE_funcion_decl = 10
    RULE_retornar_stmt = 11
    RULE_guardar_stmt = 12
    RULE_graficar_stmt = 13
    RULE_tipo_grafica = 14
    RULE_opcion_grafica = 15
    RULE_expresion = 16
    RULE_tuberia = 17
    RULE_expr = 18
    RULE_operacion = 19
    RULE_agregacion = 20
    RULE_lista_columnas = 21
    RULE_tipo_dato = 22
    RULE_o_logico = 23
    RULE_y_logico = 24
    RULE_igualdad = 25
    RULE_relacional = 26
    RULE_pertenencia = 27
    RULE_suma = 28
    RULE_termino = 29
    RULE_potencia = 30
    RULE_unario = 31
    RULE_postfijo = 32
    RULE_primario = 33
    RULE_carga = 34
    RULE_llamada = 35
    RULE_lista = 36

    ruleNames =  [ "programa", "sentencia", "bloque", "declaracion_variable", 
                   "asignacion", "expresion_stmt", "mostrar_stmt", "si_stmt", 
                   "mientras_stmt", "para_stmt", "funcion_decl", "retornar_stmt", 
                   "guardar_stmt", "graficar_stmt", "tipo_grafica", "opcion_grafica", 
                   "expresion", "tuberia", "expr", "operacion", "agregacion", 
                   "lista_columnas", "tipo_dato", "o_logico", "y_logico", 
                   "igualdad", "relacional", "pertenencia", "suma", "termino", 
                   "potencia", "unario", "postfijo", "primario", "carga", 
                   "llamada", "lista" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    FIJO=17
    VAR=18
    SI=19
    SINO=20
    FIN=21
    MIENTRAS=22
    PARA=23
    EN=24
    MOSTRAR=25
    FUNCION=26
    RETORNAR=27
    CARGAR=28
    GUARDAR=29
    COMO=30
    CON=31
    SEPARADOR=32
    SELECCIONAR=33
    FILTRAR=34
    DONDE=35
    CREAR=36
    RENOMBRAR=37
    ORDENAR=38
    POR=39
    ASC=40
    DESC=41
    ELIMINAR=42
    DUPLICADOS=43
    NULOS=44
    RELLENAR=45
    CONVERTIR=46
    AGRUPAR=47
    RESUMIR=48
    LIMITAR=49
    GRAFICAR=50
    BARRAS=51
    LINEAS=52
    HISTOGRAMA=53
    DISPERSION=54
    CAJA=55
    EJE_X=56
    EJE_Y=57
    TITULO=58
    LEYENDA=59
    T_NUMERO=60
    T_DECIMAL=61
    T_TEXTO=62
    T_BOOLEANO=63
    BOOLEANO=64
    NULO=65
    FLECHA=66
    AND=67
    OR=68
    IGUAL=69
    DIFERENTE=70
    MAYOR_IGUAL=71
    MENOR_IGUAL=72
    DECIMAL=73
    NUMERO=74
    TEXTO=75
    IDENTIFICADOR=76
    NL=77
    WS=78
    COMENTARIO_LINEA=79
    COMENTARIO_BLOQUE=80

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TerraParser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(TerraParser.NL)
            else:
                return self.getToken(TerraParser.NL, i)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TerraParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(TerraParser.SentenciaContext,i)


        def getRuleIndex(self):
            return TerraParser.RULE_programa

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = TerraParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1125900960598084) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 15875) != 0):
                self.state = 76
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [77]:
                    self.state = 74
                    self.match(TerraParser.NL)
                    pass
                elif token in [2, 6, 11, 16, 17, 18, 19, 22, 23, 25, 26, 27, 28, 29, 50, 64, 65, 73, 74, 75, 76]:
                    self.state = 75
                    self.sentencia()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self.match(TerraParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion_variable(self):
            return self.getTypedRuleContext(TerraParser.Declaracion_variableContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(TerraParser.AsignacionContext,0)


        def mostrar_stmt(self):
            return self.getTypedRuleContext(TerraParser.Mostrar_stmtContext,0)


        def si_stmt(self):
            return self.getTypedRuleContext(TerraParser.Si_stmtContext,0)


        def mientras_stmt(self):
            return self.getTypedRuleContext(TerraParser.Mientras_stmtContext,0)


        def para_stmt(self):
            return self.getTypedRuleContext(TerraParser.Para_stmtContext,0)


        def guardar_stmt(self):
            return self.getTypedRuleContext(TerraParser.Guardar_stmtContext,0)


        def graficar_stmt(self):
            return self.getTypedRuleContext(TerraParser.Graficar_stmtContext,0)


        def expresion_stmt(self):
            return self.getTypedRuleContext(TerraParser.Expresion_stmtContext,0)


        def funcion_decl(self):
            return self.getTypedRuleContext(TerraParser.Funcion_declContext,0)


        def retornar_stmt(self):
            return self.getTypedRuleContext(TerraParser.Retornar_stmtContext,0)


        def getRuleIndex(self):
            return TerraParser.RULE_sentencia

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = TerraParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentencia)
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.declaracion_variable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.asignacion()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.mostrar_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.si_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 87
                self.mientras_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 88
                self.para_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 89
                self.guardar_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 90
                self.graficar_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 91
                self.expresion_stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 92
                self.funcion_decl()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 93
                self.retornar_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(TerraParser.NL)
            else:
                return self.getToken(TerraParser.NL, i)

        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TerraParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(TerraParser.SentenciaContext,i)


        def getRuleIndex(self):
            return TerraParser.RULE_bloque

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = TerraParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1125900960598084) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 15875) != 0):
                self.state = 98
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [77]:
                    self.state = 96
                    self.match(TerraParser.NL)
                    pass
                elif token in [2, 6, 11, 16, 17, 18, 19, 22, 23, 25, 26, 27, 28, 29, 50, 64, 65, 73, 74, 75, 76]:
                    self.state = 97
                    self.sentencia()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declaracion_variableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIJO(self):
            return self.getToken(TerraParser.FIJO, 0)

        def IDENTIFICADOR(self):
            return self.getToken(TerraParser.IDENTIFICADOR, 0)

        def expresion(self):
            return self.getTypedRuleContext(TerraParser.ExpresionContext,0)


        def NL(self):
            return self.getToken(TerraParser.NL, 0)

        def VAR(self):
            return self.getToken(TerraParser.VAR, 0)

        def getRuleIndex(self):
            return TerraParser.RULE_declaracion_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion_variable" ):
                return visitor.visitDeclaracion_variable(self)
            else:
                return visitor.visitChildren(self)




    def declaracion_variable(self):

        localctx = TerraParser.Declaracion_variableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracion_variable)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.match(TerraParser.FIJO)
                self.state = 104
                self.match(TerraParser.IDENTIFICADOR)
                self.state = 105
                self.match(TerraParser.T__0)
                self.state = 106
                self.expresion()
                self.state = 107
                self.match(TerraParser.NL)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.match(TerraParser.VAR)
                self.state = 110
                self.match(TerraParser.IDENTIFICADOR)
                self.state = 111
                self.match(TerraParser.T__0)
                self.state = 112
                self.expresion()
                self.state = 113
                self.match(TerraParser.NL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFICADOR(self):
            return self.getToken(TerraParser.IDENTIFICADOR, 0)

        def expresion(self):
            return self.getTypedRuleContext(TerraParser.ExpresionContext,0)


        def NL(self):
            return self.getToken(TerraParser.NL, 0)

        def getRuleIndex(self):
            return TerraParser.RULE_asignacion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = TerraParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(TerraParser.IDENTIFICADOR)
            self.state = 118
            self.match(TerraParser.T__0)
            self.state = 119
            self.expresion()
            self.state = 120
            self.match(TerraParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expresion_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(TerraParser.ExpresionContext,0)


        def NL(self):
            return self.getToken(TerraParser.NL, 0)

        def getRuleIndex(self):
            return TerraParser.RULE_expresion_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpresion_stmt" ):
                return visitor.visitExpresion_stmt(self)
            else:
                return visitor.visitChildren(self)




    def expresion_stmt(self):

        localctx = TerraParser.Expresion_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expresion_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.expresion()
            self.state = 123
            self.match(TerraParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mostrar_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MOSTRAR(self):
            return self.getToken(TerraParser.MOSTRAR, 0)

        def NL(self):
            return self.getToken(TerraParser.NL, 0)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TerraParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(TerraParser.ExpresionContext,i)


        def getRuleIndex(self):
            return TerraParser.RULE_mostrar_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMostrar_stmt" ):
                return visitor.visitMostrar_stmt(self)
            else:
                return visitor.visitChildren(self)




    def mostrar_stmt(self):

        localctx = TerraParser.Mostrar_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mostrar_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(TerraParser.MOSTRAR)
            self.state = 126
            self.match(TerraParser.T__1)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 268503108) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & 7683) != 0):
                self.state = 127
                self.expresion()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 128
                    self.match(TerraParser.T__2)
                    self.state = 129
                    self.expresion()
                    self.state = 134
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 137
            self.match(TerraParser.T__3)
            self.state = 138
            self.match(TerraParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Si_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SI(self, i:int=None):
            if i is None:
                return self.getTokens(TerraParser.SI)
            else:
                return self.getToken(TerraParser.SI, i)

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TerraParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(TerraParser.ExpresionContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(TerraParser.NL)
            else:
                return self.getToken(TerraParser.NL, i)

        def bloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TerraParser.BloqueContext)
            else:
                return self.getTypedRuleContext(TerraParser.BloqueContext,i)


        def FIN(self):
            return self.getToken(TerraParser.FIN, 0)

        def SINO(self, i:int=None):
            if i is None:
                return self.getTokens(TerraParser.SINO)
            else:
                return self.getToken(TerraParser.SINO, i)

        def getRuleIndex(self):
            return TerraParser.RULE_si_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSi_stmt" ):
                return visitor.visitSi_stmt(self)
            else:
                return visitor.visitChildren(self)




    def si_stmt(self):

        localctx = TerraParser.Si_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_si_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(TerraParser.SI)
            self.state = 141
            self.expresion()
            self.state = 142
            self.match(TerraParser.T__4)
            self.state = 143
            self.match(TerraParser.NL)
            self.state = 144
            self.bloque()
            self.state = 154
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 145
                    self.match(TerraParser.SINO)
                    self.state = 146
                    self.match(TerraParser.SI)
                    self.state = 147
                    self.expresion()
                    self.state = 148
                    self.match(TerraParser.T__4)
                    self.state = 149
                    self.match(TerraParser.NL)
                    self.state = 150
                    self.bloque() 
                self.state = 156
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 157
                self.match(TerraParser.SINO)
                self.state = 158
                self.match(TerraParser.T__4)
                self.state = 159
                self.match(TerraParser.NL)
                self.state = 160
                self.bloque()


            self.state = 163
            self.match(TerraParser.FIN)
            self.state = 164
            self.match(TerraParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mientras_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MIENTRAS(self):
            return self.getToken(TerraParser.MIENTRAS, 0)

        def expresion(self):
            return self.getTypedRuleContext(TerraParser.ExpresionContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(TerraParser.NL)
            else:
                return self.getToken(TerraParser.NL, i)

        def bloque(self):
            return self.getTypedRuleContext(TerraParser.BloqueContext,0)


        def FIN(self):
            return self.getToken(TerraParser.FIN, 0)

        def getRuleIndex(self):
            return TerraParser.RULE_mientras_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMientras_stmt" ):
                return visitor.visitMientras_stmt(self)
            else:
                return visitor.visitChildren(self)




    def mientras_stmt(self):

        localctx = TerraParser.Mientras_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_mientras_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(TerraParser.MIENTRAS)
            self.state = 167
            self.expresion()
            self.state = 168
            self.match(TerraParser.T__4)
            self.state = 169
            self.match(TerraParser.NL)
            self.state = 170
            self.bloque()
            self.state = 171
            self.match(TerraParser.FIN)
            self.state = 172
            self.match(TerraParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Para_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARA(self):
            return self.getToken(TerraParser.PARA, 0)

        def IDENTIFICADOR(self):
            return self.getToken(TerraParser.IDENTIFICADOR, 0)

        def EN(self):
            return self.getToken(TerraParser.EN, 0)

        def expresion(self):
            return self.getTypedRuleContext(TerraParser.ExpresionContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(TerraParser.NL)
            else:
                return self.getToken(TerraParser.NL, i)

        def bloque(self):
            return self.getTypedRuleContext(TerraParser.BloqueContext,0)


        def FIN(self):
            return self.getToken(TerraParser.FIN, 0)

        def getRuleIndex(self):
            return TerraParser.RULE_para_stmt
